[tool.poetry]
name = "pacl"
version = "0.1.0"
description = ""
authors = ["paranoikcodit <paranoikpidoras@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
rich = "^13.4.2"
pytermgui = "^7.4.0"
alive-progress = "^3.1.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
